Fix: Spacing fix

--- a/modules/asset/ui/src/index.scss
+++ b/modules/asset/ui/src/index.scss
@@ -70,8 +70,8 @@ a {
 }
 
 .widget-py-spacing {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .highlight-primary {
